@@ -183,11 +183,13 @@ exportClasses(textmodel_wordscores_fitted)
 exportClasses(textmodel_wordscores_predicted)
 exportMethods(as.data.frame)
 exportMethods(as.matrix)
+exportMethods(colMeans)
 exportMethods(colSums)
 exportMethods(df)
 exportMethods(head)
 exportMethods(phrasetotoken)
 exportMethods(print)
+exportMethods(rowMeans)
 exportMethods(rowSums)
 exportMethods(show)
 exportMethods(similarity)
